@@ -1,3 +1,7 @@
+2011-07-06  Jeff Johnston  <jjohnstn@redhat.com>
+
+	* feature.xml: Add new plugins moved from gprov/gcov.
+
 2010-07-26  Elliott Baron  <ebaron@fedoraproject.org>
 
 	* feature.xml: Bump version, require CDT 7.
